@startuml

title __DIRECTORIES's Class Diagram__\n

  namespace examples.directories {
    class examples.directories.Directory {
        - files : ArrayList<File>
        + Directory()
        + add()
        + remove()
        + showInfo()
    }
  }
  

  namespace examples.directories {
    abstract class examples.directories.File {
        {static} # identado : StringBuffer
        # name : String
        + add()
        + getName()
        + remove()
        + showInfo()
    }
  }
  

  namespace examples.directories {
    class examples.directories.FileSystem {
        + FileSystem()
        + printFiles()
    }
  }
  

  namespace examples.directories {
    class examples.directories.FileSystemTestDrive {
        {static} + main()
    }
  }
  

  namespace examples.directories {
    class examples.directories.SimpleFile {
        + SimpleFile()
        + showInfo()
    }
  }
  

  examples.directories.Directory -up-|> examples.directories.File
  examples.directories.FileSystem o-- examples.directories.File : allFiles
  examples.directories.SimpleFile -up-|> examples.directories.File


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
